--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn jinja2 pytest
+          pip install fastapi uvicorn jinja2 pytest pylint black
+      - name: Lint with pylint
+        run: |
+          pylint app || exit 1
+      - name: Check code formatting with black
+        run: |
+          black --check app tests
       - name: Run tests
         run: |
           pytest
