--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn jinja2 pytest pylint black
+          pip install fastapi uvicorn jinja2 pytest pylint black pytest-cov
+          pip install sqlalchemy
       - name: Lint with pylint
         run: |
           pylint app || exit 1
@@ -28,3 +29,6 @@ jobs:
       - name: Run tests
         run: |
           pytest
+      - name: Check test coverage
+        run: |
+          pytest --cov=app --cov=tests --cov-report=term-missing --cov-fail-under=80
