--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  install:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,15 +21,73 @@ jobs:
           pip install fastapi uvicorn jinja2 pytest pylint black pytest-cov
           pip install sqlalchemy
           pip install torchvision torchaudio
+      - name: Cache dependencies
+        run: echo "Dependencies installed."
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
       - name: Lint with pylint
         run: |
           pylint app || exit 1
+
+  format:
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black
       - name: Check code formatting with black
         run: |
           black --check app tests
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [install, lint, format]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi uvicorn jinja2 pytest
       - name: Run tests
         run: |
           pytest
+
+  coverage:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi uvicorn jinja2 pytest pytest-cov
       - name: Check test coverage
         run: |
           pytest --cov=app --cov=tests --cov-report=term-missing --cov-fail-under=80
