--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
@@ -7,10 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  # ------------------
-  # BUILD STAGE
-  # ------------------
-  package-build:
+  install:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,89 +18,76 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn jinja2 pytest pylint black pytest-cov sqlalchemy torchvision torchaudio
+          pip install fastapi uvicorn jinja2 pytest pylint black pytest-cov
+          pip install sqlalchemy
+          pip install torchvision torchaudio
+      - name: Cache dependencies
+        run: echo "Dependencies installed."
 
-  package-staging-build:
+  lint:
     runs-on: ubuntu-latest
-    needs: package-build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build Staging Package
-        run: echo "Building staging package..."
-
-  # ------------------
-  # VALIDATION STAGE
-  # ------------------
-  json-validation:
-    runs-on: ubuntu-latest
-    needs: package-build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Validate JSON
-        run: echo "Validating JSON..."
-
-  yaml-validation:
-    runs-on: ubuntu-latest
-    needs: package-build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Validate YAML
-        run: echo "Validating YAML..."
-
-  # ------------------
-  # TEST STAGE
-  # ------------------
-  unittest-spark:
-    runs-on: ubuntu-latest
-    needs: [json-validation, yaml-validation]
-    strategy:
-      matrix:
-        spark: [2.4.7, 3.0.2]
+    needs: install
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install test dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pylint
+      - name: Lint with pylint
+        run: |
+          pylint app || exit 1
+
+  format:
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black
+      - name: Check code formatting with black
+        run: |
+          black --check app tests
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [install, lint, format]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi uvicorn jinja2 pytest
       - name: Run tests
         run: |
-          echo "Running Spark ${{ matrix.spark }} tests..."
           pytest
 
-  # ------------------
-  # QUALITY STAGE
-  # ------------------
   coverage:
     runs-on: ubuntu-latest
-    needs: unittest-spark
+    needs: test
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Install coverage dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-      - name: Check coverage
+          pip install fastapi uvicorn jinja2 pytest pytest-cov
+      - name: Check test coverage
         run: |
           pytest --cov=app --cov=tests --cov-report=term-missing --cov-fail-under=80
-
-  pylint-report:
-    runs-on: ubuntu-latest
-    needs: unittest-spark
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install pylint
-        run: pip install pylint
-      - name: Run pylint
-        run: pylint app || exit 1
